# MDcontrol

./: .gitignore  CMakeLists.txt  README.md
README/: README-EN.md
src/: main.cpp
src/core/: Common.h  InputCore.cpp  InputCore.h  Interfaces.h  KvmContext.cpp  KvmContext.h  KvmEvents.h  SystemUtils.h
src/network/: SocketCompat.h
src/network/Master/: MasterClipboard.cpp  MasterConnection.cpp  MasterFileTransfer.cpp  MasterInput.cpp  MasterInternal.h
src/network/Slave/: SlaveClipboard.cpp  SlaveConnection.cpp  SlaveFileTransfer.cpp  SlaveInternal.h
src/platform/windows/: WinBluetooth.cpp  WinBluetooth.h  WinClipboard.cpp  WinClipboard.h  WinCryptoMgr.cpp  WinCryptoMgr.h  WinFileLockMgr.cpp  WinFileLockMgr.h  WinInputInjector.cpp  WinInputInjector.h  WinInputListener.cpp  WinInputListener.h  WinPlatform.cpp  WinSystemUtils.cpp
src/ui/: FileTransferWidget.cpp  IconDrawer.cpp  IconDrawer.h  MainWindow.cpp  MainWindow.h  MapWidget.cpp  Overlay.cpp  SpeedGraphWidget.cpp  Translation.cpp  Translation.h
test/: bt_disconnect.cpp  bt_interference.cpp  check_network.cpp  check_path0.cpp  check_path1.cpp  check_path2.cpp  hash_test.cpp
